tutorials/minikube/kong-ingress/kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kong.transmute.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: mini-kong-kong-proxy
          servicePort: 8443
